--- a/prv.html
+++ b/prv.html
@@ -1,202 +1,17 @@
-<script src="SticInclude/vendor/bootstrap/bootstrap.min.js"></script>
-
-<!DOCTYPE html>
-<html lang="ca">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Exemple Bootstrap</title>
-
-    <link rel="stylesheet" href="SticInclude/vendor/bootstrap/css/bootstrap.scoped.min.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-  </head>
-  <body>
-    <script src="SticInclude/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-
-    <div class="stic_panel">
-      <div class="container mt-5">
-        <h2>Exemple de Pestanyes (Tabs)</h2>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link active"
-              id="home-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#home-tab-pane"
-              type="button"
-              role="tab"
-              aria-controls="home-tab-pane"
-              aria-selected="true"
-            >
-              Inici
-            </button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link"
-              id="profile-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#profile-tab-pane"
-              type="button"
-              role="tab"
-              aria-controls="profile-tab-pane"
-              aria-selected="false"
-            >
-              Perfil
-            </button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link"
-              id="contact-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#contact-tab-pane"
-              type="button"
-              role="tab"
-              aria-controls="contact-tab-pane"
-              aria-selected="false"
-            >
-              Contacte
-            </button>
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-          <div
-            class="tab-pane fade show active"
-            id="home-tab-pane"
-            role="tabpanel"
-            aria-labelledby="home-tab"
-            tabindex="0"
-          >
-            <p>Aquest és el contingut de la pestanya "Inici".</p>
-          </div>
-          <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-            <p>Aquest és el contingut de la pestanya "Perfil".</p>
-          </div>
-          <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-            <p>Aquest és el contingut de la pestanya "Contacte".</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container mt-5">
-        <h2>Exemple d'Acordió (Accordion)</h2>
-        <div class="accordion" id="myAccordion">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button
-                class="accordion-button"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseOne"
-                aria-expanded="true"
-                aria-controls="collapseOne"
-              >
-                Pregunta 1
-              </button>
-            </h2>
-            <div
-              id="collapseOne"
-              class="accordion-collapse collapse show"
-              aria-labelledby="headingOne"
-              data-bs-parent="#myAccordion"
-            >
-              <div class="accordion-body">
-                <strong>Aquesta és la resposta a la pregunta 1.</strong> És un exemple de com es pot amagar i mostrar
-                contingut.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo"
-                aria-expanded="false"
-                aria-controls="collapseTwo"
-              >
-                Pregunta 2
-              </button>
-            </h2>
-            <div
-              id="collapseTwo"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingTwo"
-              data-bs-parent="#myAccordion"
-            >
-              <div class="accordion-body">
-                <strong>Aquesta és la resposta a la pregunta 2.</strong> El contingut es col·lapsa i s'expandeix
-                fàcilment.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseThree"
-                aria-expanded="false"
-                aria-controls="collapseThree"
-              >
-                Pregunta 3
-              </button>
-            </h2>
-            <div
-              id="collapseThree"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingThree"
-              data-bs-parent="#myAccordion"
-            >
-              <div class="accordion-body">
-                <strong>Aquesta és la resposta a la pregunta 3.</strong> Les seccions es poden tancar quan se n'obre una
-                altra.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
-
-
-
-
-<div class="accordion" id="dataDef__Detached_ctrl" >
-  <div class="accordion-item" x-data="{ dataDef__Detached_ctrlopen: true }">
-    <div
-      id="dataDef__Detached_ctrl_Header_0"
-      class="btn accordion-header accordion-button collapsed"
-      @click="dataDef__Detached_ctrlopen = !dataDef__Detached_ctrlopen;"
-      :aria-expanded="dataDef__Detached_ctrlopen"
-      aria-controls="dataDef__Detached_ctrl_Content_0"
-      data-bs-toggle="collapse"
-      data-bs-target="#dataDef__Detached_ctrl_Content_0"
-      x-text="translate('LBL_FIELDS') + ' (' + formConfig.data_blocks[key].fields.length +')'"
-    ></div>
-    <div
-      id="dataDef__Detached_ctrl_Content_0"
-      class="accordion-collapse collapse"
-      aria-labelledby="dataDef__Detached_ctrl_Header_0"
-    >
-      <div id="dataDef__Detached_ctrl_Body_0" class="accordion-body"> </div>
-    </div>
-  </div>
-  
-</div>
-
-<div class="d-flex flex-column">
-  <label for="nom" >Nom</label>
-  <input type="text" id="nom" required>
-</div>
-
-<div class="d-flex flex-column">
-  <input type="text" id="nom2" required>
-  <label for="nom2" class="order-first">Nom</label>
-</div>
+<font size='1'><table class='xdebug-error xe-uncaught-exception' dir='ltr' border='1' cellspacing='0' cellpadding='1'>
+<tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> Fatal error: Uncaught Error: Unknown named parameter $name in /application/sinergiacrm/modules/stic_Advanced_Web_Forms/actions/Hook/SendEmailToAssignedUserAction.php on line <i>47</i></th></tr>
+<tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> Error: Unknown named parameter $name in /application/sinergiacrm/modules/stic_Advanced_Web_Forms/actions/Hook/SendEmailToAssignedUserAction.php on line <i>47</i></th></tr>
+<tr><th align='left' bgcolor='#e9b96e' colspan='5'>Call Stack</th></tr>
+<tr><th align='center' bgcolor='#eeeeec'>#</th><th align='left' bgcolor='#eeeeec'>Time</th><th align='left' bgcolor='#eeeeec'>Memory</th><th align='left' bgcolor='#eeeeec'>Function</th><th align='left' bgcolor='#eeeeec'>Location</th></tr>
+<tr><td bgcolor='#eeeeec' align='center'>1</td><td bgcolor='#eeeeec' align='center'>0.0170</td><td bgcolor='#eeeeec' align='right'>381720</td><td bgcolor='#eeeeec'>{main}(  )</td><td title='/application/sinergiacrm/index.php' bgcolor='#eeeeec'>.../index.php<b>:</b>0</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>2</td><td bgcolor='#eeeeec' align='center'>0.0441</td><td bgcolor='#eeeeec' align='right'>1953224</td><td bgcolor='#eeeeec'>SugarApplication->execute(  )</td><td title='/application/sinergiacrm/index.php' bgcolor='#eeeeec'>.../index.php<b>:</b>52</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>3</td><td bgcolor='#eeeeec' align='center'>0.0525</td><td bgcolor='#eeeeec' align='right'>2251984</td><td bgcolor='#eeeeec'>SugarController->execute(  )</td><td title='/application/sinergiacrm/include/MVC/SugarApplication.php' bgcolor='#eeeeec'>.../SugarApplication.php<b>:</b>107</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>4</td><td bgcolor='#eeeeec' align='center'>0.0525</td><td bgcolor='#eeeeec' align='right'>2251984</td><td bgcolor='#eeeeec'>SugarController->process(  )</td><td title='/application/sinergiacrm/include/MVC/Controller/SugarController.php' bgcolor='#eeeeec'>.../SugarController.php<b>:</b>365</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>5</td><td bgcolor='#eeeeec' align='center'>0.0526</td><td bgcolor='#eeeeec' align='right'>2265608</td><td bgcolor='#eeeeec'>SugarController->handle_action(  )</td><td title='/application/sinergiacrm/include/MVC/Controller/SugarController.php' bgcolor='#eeeeec'>.../SugarController.php<b>:</b>469</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>6</td><td bgcolor='#eeeeec' align='center'>0.0526</td><td bgcolor='#eeeeec' align='right'>2265608</td><td bgcolor='#eeeeec'>SugarController->do_action(  )</td><td title='/application/sinergiacrm/include/MVC/Controller/SugarController.php' bgcolor='#eeeeec'>.../SugarController.php<b>:</b>495</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>7</td><td bgcolor='#eeeeec' align='center'>0.0526</td><td bgcolor='#eeeeec' align='right'>2265656</td><td bgcolor='#eeeeec'>stic_Advanced_Web_FormsController->action_getServerActions(  )</td><td title='/application/sinergiacrm/include/MVC/Controller/SugarController.php' bgcolor='#eeeeec'>.../SugarController.php<b>:</b>526</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>8</td><td bgcolor='#eeeeec' align='center'>166.9012</td><td bgcolor='#eeeeec' align='right'>2352128</td><td bgcolor='#eeeeec'><a href='http://www.php.net/function.array-map' target='_new'>array_map</a>( <span>$callback = </span><span>class Closure { ... }</span>, <span>$array = </span><span>[...]</span> )</td><td title='/application/sinergiacrm/modules/stic_Advanced_Web_Forms/controller.php' bgcolor='#eeeeec'>.../controller.php<b>:</b>119</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>9</td><td bgcolor='#eeeeec' align='center'>166.9019</td><td bgcolor='#eeeeec' align='right'>2361720</td><td bgcolor='#eeeeec'>stic_Advanced_Web_FormsController->{closure:/application/sinergiacrm/modules/stic_Advanced_Web_Forms/controller.php:119-119}( <span>$actionDef = </span><span>class SendEmailToAssignedUserAction { ... }</span> )</td><td title='/application/sinergiacrm/modules/stic_Advanced_Web_Forms/controller.php' bgcolor='#eeeeec'>.../controller.php<b>:</b>119</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>10</td><td bgcolor='#eeeeec' align='center'>166.9019</td><td bgcolor='#eeeeec' align='right'>2362104</td><td bgcolor='#eeeeec'>ActionDefinitionDTO->__construct( <span>$def = </span><span>class SendEmailToAssignedUserAction { ... }</span> )</td><td title='/application/sinergiacrm/modules/stic_Advanced_Web_Forms/controller.php' bgcolor='#eeeeec'>.../controller.php<b>:</b>119</td></tr>
+<tr><td bgcolor='#eeeeec' align='center'>11</td><td bgcolor='#eeeeec' align='center'>166.9020</td><td bgcolor='#eeeeec' align='right'>2362512</td><td bgcolor='#eeeeec'>SendEmailToAssignedUserAction->getParameters(  )</td><td title='/application/sinergiacrm/modules/stic_Advanced_Web_Forms/core/actiondefs/ActionDefinitionDTO.php' bgcolor='#eeeeec'>.../ActionDefinitionDTO.php<b>:</b>73</td></tr>
+</table></font>
